--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+.form {
+  margin: 0 auto;
+  width: 300px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@keyframes rotate3d {
+  from {
+    transform: rotate3d(0, 1, 0, 0deg); /* Initial rotation, you can adjust the axis and angle */
+  }
+
+  to {
+    transform: rotate3d(1, 1, 0, 360deg); /* Final rotation, adjust as needed */
+  }
+}
+
+.parent {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 100px;
+}
+
+.child {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  border-top: 2px solid black;
+  position: absolute;
+  top: 100px;
+}
